# rust_tetro

./: .gitignore  Cargo.toml  LICENSE  README.md  log.txt  notes.txt
benches/: my_benchmark.rs
src/: SRS.json  board.rs  colors.rs  field.rs  fumen.rs  gameplay.rs  kicks.rs  lib.rs  math.rs  piece.rs  queue.rs  tetra.rs  vec2.rs
src/board/: mod.rs
src/field/: mod.rs
src/fumen/: mod.rs
src/kicks/: mod.rs
src/pc_utils/: bitboard.rs  bitpiece.rs  bitqueue.rs  i64_board_mod.rs  mod.rs  placement_tree.rs  u64_board_mod.rs  u64board.rs  u64field.rs
src/piece/: mod.rs
src/queue/: mod.rs
