[package]
name = "rust_tetro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "cdylib"]
[[bin]]
name = "main"
src = "src/main.rs"

[dependencies]
bitvec = "1.0.1"
fumen = {git = "https://github.com/arockidk/fumen-rs.git"}
getargs = "0.5.0"
js-sys = "0.3.68"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"
[profile.dev]
opt-level = 3
overflow-checks = false
[dev-dependencies]
criterion = "0.5.1"
[[bench]]
name = "my_benchmark"
harness = false
